--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,11 +6,11 @@ features:
 dataSources:
   - kind: ethereum
     name: Bridge
-    network: goerli
+    network: sepolia
     source:
       abi: Bridge
-      address: "0x0Cad3257C4B7ec6de1f6926Fbf5714255a6632c3"
-      startBlock: 8364954
+      address: "0x9b1a7fE5a16A15F2f9475C5B231750598b113403"
+      startBlock: 4553028
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -94,11 +94,11 @@ dataSources:
       file: ./src/mappingBridge.ts
   - kind: ethereum
     name: TBTCVault
-    network: goerli
+    network: sepolia
     source:
       abi: TBTCVault
-      address: "0x65eB0562FCe858f8328858c76E689aBedB78621F"
-      startBlock: 8364960
+      address: "0xB5679dE944A79732A75CE556191DF11F489448d5"
+      startBlock: 4553069
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -136,11 +136,11 @@ dataSources:
       file: ./src/mappingTBTCVault.ts
   - kind: ethereum
     name: TBTC
-    network: goerli
+    network: sepolia
     source:
       abi: TBTC
-      address: "0x679874fbe6d4e7cc54a59e315ff1eb266686a937"
-      startBlock: 8364943
+      address: "0x517f2982701695D4E52f1ECFBEf3ba31Df470161"
+      startBlock: 4553001
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -156,11 +156,11 @@ dataSources:
       file: ./src/mappingTBTCToken.ts
   - kind: ethereum
     name: TokenStaking
-    network: goerli
+    network: sepolia
     source:
       abi: TokenStaking
-      address: "0x1da5d88C26EA4f87b5e09C3452eE2384Ee20DC75"
-      startBlock: 7681424
+      address: "0xa07f4E37C2E7089Ea3AFffbe51A6A281833a4D14"
+      startBlock: 4272679
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -190,11 +190,11 @@ dataSources:
       file: ./src/mappingTokenStaking.ts
   - kind: ethereum
     name: RandomBeacon
-    network: goerli
+    network: sepolia
     source:
       abi: RandomBeacon
-      address: "0xF177CfA720ceC42841c04A458f6c68e1243C1b49"
-      startBlock: 8364724
+      address: "0x02CBA6D77CF9fB019e322c55b34c9d42f2eF4D74"
+      startBlock: 4507403
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -243,8 +243,6 @@ dataSources:
           handler: handleRelayEntryDelaySlashed
         - event: RelayEntryRequested(indexed uint256,uint64,bytes)
           handler: handleRelayEntryRequested
-        - event: RelayEntrySubmitted(indexed uint256,address,bytes)
-          handler: handleRelayEntrySubmitted
         - event: RelayEntryTimedOut(indexed uint256,uint64)
           handler: handleRelayEntryTimedOut
         - event: RelayEntryTimeoutSlashed(indexed uint256,uint256,address[])
@@ -256,11 +254,11 @@ dataSources:
       file: ./src/mappingRandomBeacon.ts
   - kind: ethereum
     name: SortitionPool
-    network: goerli
+    network: sepolia
     source:
       abi: SortitionPool
-      address: "0x3FC63cDBC1fc82F6aDb82d3dEAF7c31723961540"
-      startBlock: 8364710
+      address: "0xd636B635630c42A474858b877ea2324AFdE796d2"
+      startBlock: 4507392
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -290,35 +288,12 @@ dataSources:
           handler: handleRewardEligibilityRestored
       file: ./src/mappingSortitionPool.ts
   - kind: ethereum
-    name: SimplePREApplication
-    network: goerli
-    source:
-      abi: SimplePREApplication
-      address: "0x829fdCDf6Be747FEA37518fBd83dF70EE371fCf2"
-      startBlock: 8364954
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.6
-      language: wasm/assemblyscript
-      entities:
-        - OperatorBonded
-        - OperatorConfirmed
-      abis:
-        - name: SimplePREApplication
-          file: ./abis/SimplePREApplication.json
-      eventHandlers:
-        - event: OperatorBonded(indexed address,indexed address,uint256)
-          handler: handleOperatorBonded
-        - event: OperatorConfirmed(indexed address,indexed address)
-          handler: handleOperatorConfirmed
-      file: ./src/mappingSimplePreApplication.ts
-  - kind: ethereum
     name: WalletRegistry
-    network: goerli
+    network: sepolia
     source:
       abi: WalletRegistry
-      address: "0x0f0E2afF99A55B11026Fb270A05f04d37724dE86"
-      startBlock: 8364851
+      address: "0x2DfC89675AB5Fb5Be7c2A86d373Daac3E795fc25"
+      startBlock: 4507506
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
