--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "build-goerli": "graph build --network goerli",
     "build-sepolia": "graph build --network sepolia",
-    "build-mainnet": "graph build --network mainnet",
-    "deploy-goerli": "graph deploy --studio threshold-tbtc-testnet",
     "deploy-sepolia": "graph deploy --studio threshold-tbtc-sepolia",
-    "deploy-mainnet": "graph deploy --studio threshold-tbtc-mainnet",
+    "build-mainnet": "graph build --network mainnet",
+    "deploy-mainnet": "graph deploy --studio tbtc-mainnet",
     "create-local": "graph create --node http://localhost:8020/ suntzu93/threshold-tbtc-goerli",
     "remove-local": "graph remove --node http://localhost:8020/ suntzu93/threshold-tbtc-goerli",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 suntzu93/tbtcv2"
