--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,11 +6,11 @@ features:
 dataSources:
   - kind: ethereum
     name: Bridge
-    network: sepolia
+    network: mainnet
     source:
       abi: Bridge
-      address: "0x9b1a7fE5a16A15F2f9475C5B231750598b113403"
-      startBlock: 4553028
+      address: "0x5e4861a80B55f035D899f66772117F00FA0E8e7B"
+      startBlock: 16397413
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -89,16 +89,20 @@ dataSources:
       callHandlers:
         - function: submitRedemptionProof((bytes4,bytes,bytes,bytes4),(bytes,uint256,bytes),(bytes32,uint32,uint64),bytes20)
           handler: callHandlerSubmitRedemptionProof
+        - function: submitRedemptionProof((bytes4,bytes,bytes,bytes4),(bytes,uint256,bytes,bytes32,bytes),(bytes32,uint32,uint64),bytes20)
+          handler: callHandlerSubmitRedemptionProof
         - function: submitDepositSweepProof((bytes4,bytes,bytes,bytes4),(bytes,uint256,bytes),(bytes32,uint32,uint64),address)
+          handler: callHandleSubmitDepositSweepProofCall
+        - function: submitDepositSweepProof((bytes4,bytes,bytes,bytes4),(bytes,uint256,bytes,bytes32,bytes),(bytes32,uint32,uint64),address)
           handler: callHandleSubmitDepositSweepProofCall
       file: ./src/mappingBridge.ts
   - kind: ethereum
     name: TBTCVault
-    network: sepolia
+    network: mainnet
     source:
       abi: TBTCVault
-      address: "0xB5679dE944A79732A75CE556191DF11F489448d5"
-      startBlock: 4553069
+      address: "0x9C070027cdC9dc8F82416B2e5314E11DFb4FE3CD"
+      startBlock: 16472741
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -136,11 +140,11 @@ dataSources:
       file: ./src/mappingTBTCVault.ts
   - kind: ethereum
     name: TBTC
-    network: sepolia
+    network: mainnet
     source:
       abi: TBTC
-      address: "0x517f2982701695D4E52f1ECFBEf3ba31Df470161"
-      startBlock: 4553001
+      address: "0x18084fbA666a33d37592fA2633fD49a74DD93a88"
+      startBlock: 13042356
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -156,11 +160,11 @@ dataSources:
       file: ./src/mappingTBTCToken.ts
   - kind: ethereum
     name: TokenStaking
-    network: sepolia
+    network: mainnet
     source:
       abi: TokenStaking
-      address: "0xa07f4E37C2E7089Ea3AFffbe51A6A281833a4D14"
-      startBlock: 4272679
+      address: "0x01B67b1194C75264d06F808A921228a95C765dd7"
+      startBlock: 14113768
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -190,11 +194,11 @@ dataSources:
       file: ./src/mappingTokenStaking.ts
   - kind: ethereum
     name: RandomBeacon
-    network: sepolia
+    network: mainnet
     source:
       abi: RandomBeacon
-      address: "0x02CBA6D77CF9fB019e322c55b34c9d42f2eF4D74"
-      startBlock: 4507403
+      address: "0x5499f54b4A1CB4816eefCf78962040461be3D80b"
+      startBlock: 15638933
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -254,11 +258,11 @@ dataSources:
       file: ./src/mappingRandomBeacon.ts
   - kind: ethereum
     name: SortitionPool
-    network: sepolia
+    network: mainnet
     source:
       abi: SortitionPool
-      address: "0xd636B635630c42A474858b877ea2324AFdE796d2"
-      startBlock: 4507392
+      address: "0x4e4cBA3779d56386ED43631b4dCD6d8EacEcBCF6"
+      startBlock: 15638881
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -289,11 +293,11 @@ dataSources:
       file: ./src/mappingSortitionPool.ts
   - kind: ethereum
     name: WalletRegistry
-    network: sepolia
+    network: mainnet
     source:
       abi: WalletRegistry
-      address: "0x2DfC89675AB5Fb5Be7c2A86d373Daac3E795fc25"
-      startBlock: 4507506
+      address: "0x46d52e41c2f300bc82217ce22b920c34995204eb"
+      startBlock: 15639521
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
